tests/fail/undeclared_variant.stderr
error: `enum` variant is not a declared state.
  --> $DIR/undeclared_variant.rs:19:9
   |
19 |         Second
   |         ^^^^^^
